# soturon

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  app.py  config.ini  gene_html.py  main.py  my_score_pos.py  my_trimming.py  pyproject.toml  readme.md  recog_score.py  recog_score2.py  run.py  run_web.py  settings.py
.github/workflows/: review.yml  test.yml
core/: downloader.py  html_generator.py  logger.py  processor.py  recog_score.py  recog_score2.py  score_pos.py  trimming.py
docs/: architecture.md  config.md  todo.md
scripts/: review_pr.py
static/: edit.js  index.js  settings.js  style.css  viewer.js
templates/: edit.html  index.html  settings.html  viewer.html
tests/: conftest.py  test_downloader.py  test_edit.py  test_trimming.py  test_viewer.py
ui/: frame_selector.py  region_selector.py
