[project]
name = "drum-score"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "imgsim>=0.1.2",
    "loguru>=0.7.3",
    "opencv-python>=4.13.0.92",
    "torchvision>=0.26.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = [
    "anthropic>=0.55.0",
    "isort>=8.0.1",
    "playwright>=1.59.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = ["E501"]          # 日本語コメントが多いため行長制限は除外

[tool.isort]
profile = "black"
